--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-modalize": "^2.0.8",
+    "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
