--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,8 +2,9 @@
 
 buildscript {
     ext {
+        kotlin_version = '1.3.21'
         buildToolsVersion = "29.0.2"
-        minSdkVersion = 16
+        minSdkVersion = 18
         compileSdkVersion = 29
         targetSdkVersion = 29
     }
@@ -13,6 +14,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.5.3")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
