feat(donwload): installing rn-fetch-blob, react-native-community/cameraroll and react-native-permissions as dependency

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,6 +191,8 @@ dependencies {
 
     implementation project(':watermelondb')
 
+    compile project(':@react-native-community_cameraroll')
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
