--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,7 +1,11 @@
 rootProject.name = 'Heartit'
+include ':@react-native-community_cameraroll'
+project(':@react-native-community_cameraroll').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/cameraroll/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 include ':watermelondb'
 project(':watermelondb').projectDir =
     new File(rootProject.projectDir, '../node_modules/@nozbe/watermelondb/native/android')
-
+include ':@react-native-community_cameraroll'
+project(':@react-native-community_cameraroll').projectDir = 
+    new File(rootProject.projectDir, '../node_modules/@react-native-community/cameraroll/android')
