--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nozbe/watermelondb": "^0.20.0",
     "@nozbe/with-observables": "^1.0.8",
+    "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
@@ -20,11 +21,13 @@
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-modalize": "^2.0.8",
+    "react-native-permissions": "^3.0.0",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-vector-icons": "^7.1.0",
+    "rn-fetch-blob": "^0.12.0",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5"
   },
